--- a/2nMarkdown/过去是无法改变的.md
+++ b/2nMarkdown/过去是无法改变的.md
@@ -22,7 +22,9 @@ This file is created by Marboo<http://marboo.io> template file $MARBOO_HOME/.med
 
 当疯帽子因为坚信战火中失散的家人还在世从而被其他同伴视为异类时，他仍坚定地认为爱丽丝是真正懂他相信他的人（虽然看到这很想吐槽，可是德普叔的气势真是棒啊），是呀，无条件地信任是真朋友的定义之一吧。
 
-
+<center>
+![气势恢宏的德普叔啊](https://github.com/gloria2016/OMOOCHacker/blob/master/2nMarkdown/%E7%96%AF%E5%B8%BD%E5%AD%90.jpg)
+</center>
 
 ##关于勇气
 
